Closed Bug 1549972 Opened 5 years ago Closed 5 years ago

It is very difficult to resize by dragging top border of browser if titlebar is disabled

Categories

(Core :: Widget: Win32, defect, P2)

69 Branch
x86_64
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- unaffected
firefox68 --- unaffected
firefox69 --- fixed

People

(Reporter: alice0775, Assigned: mconley)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

+++ This bug was initially created as a clone of Bug #1548303 +++

Sometimes, the mouse pointer is changed to resizer cursor. But the pointer will be immediately changed to normal cursor.

If titlebar is enabled(customize and checked TitleBar), the problem does not happen.

Steps To Reproduce:

  1. Disable titlebar (this is default)
  2. Try to resize the window by dragging the top border of browser

Actual Results:
Sometimes, the mouse pointer is changed to resizer cursor. But the pointer will be immediately changed to normal cursor.

Expected Results:
At least, A mouse pointer should react like the left/right/bottom border of window.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=32552726554321d35a8c18224343fe73ece324c2&tochange=0930049c0ca984c909d11ba2853ef6d96e43e242

Regressed by: 0930049c0ca984c909d11ba2853ef6d96e43e242 Mike Conley — Bug 1534389 - Send normal mouse events when cursor is over a draggable region on Windows. r=jmathies

:mconley,
Your patch seems to cause the regression. Can you please look into this?

Assignee: nobody → mconley

ClientMarginHitTestPoint takes into account the fact that we want a minimum
of kResizableBorderMinSize pixels thickness around the window to trigger
resizing.

any chance this regressed resizing the window from the top window frame border? I'm seeing a bug here on windows 7 where the drag cursor flashes visible for a second then goes away.

(In reply to Jim Mathies [:jimm] from comment #2)

any chance this regressed resizing the window from the top window frame border? I'm seeing a bug here on windows 7 where the drag cursor flashes visible for a second then goes away.

Yes, I believe that's the same regression. I believe this patch will fix that too.

Pushed by mconley@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8f236d0ba0fa
Use ClientMarginHitTestPoint when checking if the mouse is within a draggable region. r=jmathies
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Flags: qe-verify+

Hi Alice. Can you verify this fix? I am trying to notice a considerable difference between the affected and fixed version. Considering the fact that you logged it, I trust that you will verify it correctly. Thank you.

Flags: needinfo?(alice0775)

I can still reproduce the issue on Nightly69.0a1 Windows10 with fresh profile.
Build ID 20190606215319
User Agent Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:69.0) Gecko/20100101 Firefox/69.0

Flags: needinfo?(alice0775)

00:00 - 00:14 Nghtly69.0a1 --- Bad
00:15 - 00:28 Firefox67.0 --- Good

Bad:
The mouse pointer is changed to resizer cursor at the top edge.
But the pointer will be immediately changed to normal cursor.

Good:
The mouse pointer is changed to resizer cursor at the top edge.
And the cursor shape persists as long as you don't move the mouse pointer.

Blocks: 1557710

Anyway I have filed a new bug (Bug 1557710).

I have to mention that I cannot reproduce this issue on Nightly v68.0a1 (2019-05-08) nor on Nightly v69.0a1 (2019-06-10). This being said, I certainly cannot verify or confirm this issue on my Windows 10.
@Alice: Are you sure this issue is valid and not related to the OS themes you are using? you seem to have some kind of theme for the cursor, at least.

Thanks.

Flags: needinfo?(alice0775)

(In reply to Bodea Daniel [:danibodea] from comment #10)

I have to mention that I cannot reproduce this issue on Nightly v68.0a1
(2019-05-08) nor on Nightly v69.0a1 (2019-06-10). This being said, I
certainly cannot verify or confirm this issue on my Windows 10.
@Alice: Are you sure this issue is valid and not related to the OS themes
you are using? you seem to have some kind of theme for the cursor, at least.

Thanks.

I tried to test on guest account of Windows10.
And I can also reproduce the problem on Nightly69 on the guest account(so the OS theme and mouse cursor should be default of Windows10). And I got same regression window....

WORKAROUND:
Enabled Titlebar or Enabled Menubar.

Flags: needinfo?(alice0775)

Removing qe-verify+ tag, considering the new bug added.

Flags: qe-verify+

Reproduced with default OS theme, default mouse pointer settings

This got backed out from beta for causing conflicts when backing out bug 1534389.

https://hg.mozilla.org/releases/mozilla-beta/rev/02be9e9185f4656f0c844d74132dc59655eeff5c

Target Milestone: mozilla68 → mozilla69
Version: 68 Branch → 69 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: