Bug 1549972 - Use ClientMarginHitTestPoint when checking if the mouse is within a draggable region. r=jmathies

ClientMarginHitTestPoint takes into account the fact that we want a minimum
of kResizableBorderMinSize pixels thickness around the window to trigger
resizing.

Differential Revision: https://phabricator.services.mozilla.com/D30427